[package]
name = "ka"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
clipboard = "0.5.0"
arboard = "3.6.1"
chrono = "0.4.44"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
serde_json = "1.0.149"
unicode-width = "0.2.2"
